fix feedback height + fix overflow x scroll

--- a/src/styles/components/profile/_profile.scss
+++ b/src/styles/components/profile/_profile.scss
@@ -5,6 +5,7 @@
       position: absolute;
       width: 100%;
       .profile_table {
+        overflow-x: hidden;
         position: absolute;
         height: calc(100%);
         width: 100%;
